--- a/portfolio.html
+++ b/portfolio.html
@@ -132,13 +132,6 @@
         </button>
         <button
           class="btn btn-primary me-2 category-button-flex"
-          data-category="family-photos"
-        >
-          <i class="fa-solid fa-people-roof fa-2x family-icon-custom"></i>
-          <span class="text-family">Fotografii de familie</span>
-        </button>
-        <button
-          class="btn btn-primary me-2 category-button-flex"
           data-category="studio"
         >
           <i class="fa-solid fa-camera-retro fa-2x studio-icon-custom"></i>
@@ -619,28 +612,65 @@
         <!-- Landscape -->
         <div class="col-md-4 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-baptism"> </a>
+            <a
+              href="./images/botezuri/botez_l_1.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_1.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-baptism"> </a>
+            <a
+              href="./images/botezuri/botez_l_2.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_2.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-baptism"> </a>
+            <a
+              href="./images/botezuri/botez_l_3.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_3.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
-        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+        <div class="col-md-4 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-baptism"> </a>
+            <a
+              href="./images/botezuri/botez_l_4.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_4.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
-        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+        <div class="col-md-4 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
             <a
               href="./images/botezuri/botez_l_5.jpg"
@@ -648,7 +678,7 @@
             >
               <img
                 src="./images/botezuri/botez_l_5.jpg"
-                alt="Baptism Photo 2"
+                alt="Wedding Photo 11"
                 class="img-fluid"
               />
             </a>
@@ -670,23 +700,113 @@
           </div>
         </div>
 
-        <!-- Portrait -->
         <div class="col-md-4 mt-2 photo-item" data-category="baptism">
-          <div class="img-wrapper">
+          <div class="img-wrapper-landscape">
+            <a
+              href="./images/botezuri/botez_l_7.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_7.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper-landscape">
+            <a
+              href="./images/botezuri/botez_l_8.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_8.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper-landscape">
+            <a
+              href="./images/botezuri/botez_l_9.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_9.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper-landscape">
+            <a
+              href="./images/botezuri/botez_l_10.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_10.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper-landscape">
             <a href="" data-lightbox="image-baptism"> </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="baptism">
-          <div class="img-wrapper">
+          <div class="img-wrapper-landscape">
             <a href="" data-lightbox="image-baptism"> </a>
+          </div>
+        </div>
+
+        <!-- Portrait -->
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper">
+            <a
+              href="/images/botezuri/botez_p_1.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_p_1.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="baptism">
           <div class="img-wrapper">
             <a
-              href="./images/botezuri/botez_p_3.jpg"
+              href="/images/botezuri/botez_p_2.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_p_2.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper">
+            <a
+              href="/images/botezuri/botez_p_3.jpg"
               data-lightbox="image-baptism"
             >
               <img
@@ -697,87 +817,6 @@
             </a>
           </div>
         </div>
-
-        <!-- Family Photos -->
-        <!-- Portrait -->
-        <div class="col-md-4 photo-item" data-category="family-photos">
-          <div class="img-wrapper">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 photo-item" data-category="family-photos">
-          <div class="img-wrapper">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 photo-item" data-category="family-photos">
-          <div class="img-wrapper">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 photo-item" data-category="family-photos">
-          <div class="img-wrapper">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 photo-item" data-category="family-photos">
-          <div class="img-wrapper">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
-          <div class="img-wrapper">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-        <!-- Landscape -->
-        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
-          <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
-          <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
-          <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="family-photos"></a>
-          </div>
-        </div>
-
-        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
-          <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
-          <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
-          <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
-        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
-          <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="family-photos"> </a>
-          </div>
-        </div>
-
         <!-- Christmas Photos -->
         <!-- Landscape -->
         <div class="col-md-4 mt-2 photo-item" data-category="studio">
