--- a/services.html
+++ b/services.html
@@ -251,17 +251,6 @@
         <div class="col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm bg-info">
             <div class="card-body">
-              <h5 class="card-title">Albume foto personalizate</h5>
-              <p class="card-text">
-                Realizate profesional, cu design adaptat evenimentului.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4">
-          <div class="card h-100 shadow-sm bg-info">
-            <div class="card-body">
               <h5 class="card-title">Editare foto și video profesională</h5>
               <p class="card-text">
                 Pentru a asigura calitatea și coerența materialelor livrate.
@@ -274,7 +263,22 @@
           <div class="card h-100 shadow-sm bg-dark text-white">
             <div class="card-body">
               <h5 class="card-title text-white">Servicii de printare foto</h5>
-              <p class="card-text">Canvasuri de orice dimensiune.</p>
+              <p class="card-text">
+                Canvasuri de orice dimensiune, albume foto personalizate,
+                fotografii de diferite dimensiuni.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm bg-primary text-white">
+            <div class="card-body">
+              <h5 class="card-title text-white">Invitații evenimente</h5>
+              <p class="card-text">
+                Invitații pentru nunți și botezuri, plicuri de bani, mărturii
+                foto.
+              </p>
             </div>
           </div>
         </div>
