--- a/portfolio.html
+++ b/portfolio.html
@@ -274,11 +274,11 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
-              href="./images/nunti/nunta_p_9.jpg"
+              href="./images/nunti/nunta_p_9.JPG"
               data-lightbox="image-wedding"
             >
               <img
-                src="./images/nunti/nunta_p_9.jpg"
+                src="./images/nunti/nunta_p_9.JPG"
                 alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
