--- a/portfolio.html
+++ b/portfolio.html
@@ -289,11 +289,11 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
-              href="./images/nunti/nunta_p_10.jpg"
+              href="./images/nunti/nunta_p_10.JPG"
               data-lightbox="image-wedding"
             >
               <img
-                src="./images/nunti/nunta_p_10.jpg"
+                src="./images/nunti/nunta_p_10.JPG"
                 alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
@@ -304,11 +304,11 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
-              href="./images/nunti/nunta_p_11.jpg"
+              href="./images/nunti/nunta_p_11.JPG"
               data-lightbox="image-wedding"
             >
               <img
-                src="./images/nunti/nunta_p_11.jpg"
+                src="./images/nunti/nunta_p_11.JPG"
                 alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
@@ -319,11 +319,11 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
-              href="./images/nunti/nunta_p_12.jpg"
+              href="./images/nunti/nunta_p_12.JPG"
               data-lightbox="image-wedding"
             >
               <img
-                src="./images/nunti/nunta_p_12.jpg"
+                src="./images/nunti/nunta_p_12.JPG"
                 alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
@@ -334,11 +334,11 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
-              href="./images/nunti/nunta_p_13.jpg"
+              href="./images/nunti/nunta_p_13.JPG"
               data-lightbox="image-wedding"
             >
               <img
-                src="./images/nunti/nunta_p_13.jpg"
+                src="./images/nunti/nunta_p_13.JPG"
                 alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
@@ -349,11 +349,11 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
-              href="./images/nunti/nunta_p_14.jpg"
+              href="./images/nunti/nunta_p_14.JPG"
               data-lightbox="image-wedding"
             >
               <img
-                src="./images/nunti/nunta_p_14.jpg"
+                src="./images/nunti/nunta_p_14.JPG"
                 alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
@@ -364,11 +364,11 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
-              href="./images/nunti/nunta_p_15.jpg"
+              href="./images/nunti/nunta_p_15.JPG"
               data-lightbox="image-wedding"
             >
               <img
-                src="./images/nunti/nunta_p_15.jpg"
+                src="./images/nunti/nunta_p_15.JPG"
                 alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
@@ -379,11 +379,11 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
-              href="./images/nunti/nunta_p_16.jpg"
+              href="./images/nunti/nunta_p_16.JPG"
               data-lightbox="image-wedding"
             >
               <img
-                src="./images/nunti/nunta_p_16.jpg"
+                src="./images/nunti/nunta_p_16.JPG"
                 alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
@@ -394,11 +394,11 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
-              href="./images/nunti/nunta_p_17.jpg"
+              href="./images/nunti/nunta_p_17.JPG"
               data-lightbox="image-wedding"
             >
               <img
-                src="./images/nunti/nunta_p_17.jpg"
+                src="./images/nunti/nunta_p_17.JPG"
                 alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
