--- a/portfolio.html
+++ b/portfolio.html
@@ -762,13 +762,76 @@
 
         <div class="col-md-4 mt-2 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-baptism"> </a>
+            <a
+              href="./images/botezuri/botez_l_11.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_11.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-baptism"> </a>
+            <a
+              href="./images/botezuri/botez_l_12.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_12.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper-landscape">
+            <a
+              href="./images/botezuri/botez_l_13.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_13.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper-landscape">
+            <a
+              href="./images/botezuri/botez_l_14.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_14.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper-landscape">
+            <a
+              href="./images/botezuri/botez_l_15.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_l_15.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
@@ -811,6 +874,21 @@
             >
               <img
                 src="./images/botezuri/botez_p_3.jpg"
+                alt="Baptism Photo 2"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <div class="img-wrapper">
+            <a
+              href="/images/botezuri/botez_p_4.jpg"
+              data-lightbox="image-baptism"
+            >
+              <img
+                src="./images/botezuri/botez_p_4.jpg"
                 alt="Baptism Photo 2"
                 class="img-fluid"
               />
