--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <span class="logo-text"> Studio Foto Adda </span>
             <small class="logo-subtext">Servicii Foto Profesionale</small>
           </div>
+          test
         </a>
         <button
           class="navbar-toggler"
