--- a/thank_you.html
+++ b/thank_you.html
@@ -33,9 +33,7 @@
       rel="stylesheet"
     />
 
-    <link rel="manifest" href="/site.webmanifest" />
-    <title>Studio Foto Adda</title>
-    <title>Document</title>
+    <title>Mulțumim | Studio Foto Adda</title>
   </head>
   <body>
     <div class="container container-thank-you">
