--- a/too-many-requests.html
+++ b/too-many-requests.html
@@ -3,9 +3,81 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/font-awesome.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon-16x16.png"
+    />
+
+    <!-- Pacifico Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Limită atinsă | Studio Foto Adda</title>
   </head>
-  <body>
-    <h1>Prea multe solicitari</h1>
+  <body class="bg-light">
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-6">
+          <div class="card shadow-sm p-4 p-md-5">
+            <!-- Logo Section -->
+            <div
+              class="logo-link d-flex justify-content-center align-items-center mb-4"
+            >
+              <img
+                src="/images/logo.svg"
+                alt="Studio Foto Adda"
+                class="img-fluid"
+                style="max-height: 80px"
+              />
+              <div class="d-flex flex-column">
+                <span class="logo-text"> Studio Foto Adda </span>
+                <small class="logo-subtext">Servicii Foto Profesionale</small>
+              </div>
+            </div>
+
+            <!-- Message Section -->
+            <div class="text-center mb-4">
+              <h2 class="fw-bold mb-3">Limită de solicitări atinsă</h2>
+              <p class="lead mb-3">
+                Din motive de securitate, limităm numărul de cereri care pot fi
+                trimise într-o perioadă scurtă de timp.
+              </p>
+              <p class="mb-0">
+                Vă rugăm să încercați din nou mai târziu sau să ne contactați
+                prin alte metode disponibile pe site.
+              </p>
+            </div>
+
+            <!-- Button Section -->
+            <div class="d-grid gap-2 col-md-6 mx-auto">
+              <a href="/" class="btn btn-primary py-2">
+                Înapoi la pagina principală
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
